--- a/Lyrics Scrape.ipynb
+++ b/Lyrics Scrape.ipynb
@@ -14,22 +14,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "069b7ae8",
-   "metadata": {},
-   "source": [
-    "## General Assignment Instructions\n",
-    "\n",
-    "These instructions are included in every assignment, to remind you of the coding standards for the class. Feel free to delete this cell after reading it. \n",
-    "\n",
-    "One sign of mature code is conforming to a style guide. We recommend the [Google Python Style Guide](https://google.github.io/styleguide/pyguide.html). If you use a different style guide, please include a cell with a link. \n",
-    "\n",
-    "Your code should be relatively easy-to-read, sensibly commented, and clean. Writing code is a messy process, so please be sure to edit your final submission. Remove any cells that are not needed or parts of cells that contain unnecessary code. Remove inessential `import` statements and make sure that all such statements are moved into the designated cell. \n",
-    "\n",
-    "Make use of non-code cells for written commentary. These cells should be grammatical and clearly written. In some of these cells you will have questions to answer. The questions will be marked by a \"Q:\" and will have a corresponding \"A:\" spot for you. *Make sure to answer every question marked with a `Q:` for full credit.* \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "91c8969e",
    "metadata": {},
    "source": [
@@ -38,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 79,
    "id": "185076b0",
    "metadata": {},
    "outputs": [],
@@ -57,13 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "a47e2d5f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use this cell for any import statements you add\n",
-    "\n"
+    "import shutil\n",
+    "from urllib.parse import urljoin\n",
+    "import nbconvert"
    ]
   },
   {
@@ -80,17 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "5bd7df77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "artists = {'robyn':\"https://www.azlyrics.com/r/robyn.html\",\n",
-    "           'cher':\"https://www.azlyrics.com/c/cher.html\"} \n",
+    "artists = {'CityAlight':\"https://www.azlyrics.com/c/cityalight.html\",\n",
+    "           'Pat Barrett':\"https://www.azlyrics.com/p/patbarrett.html\"} \n",
     "# we'll use this dictionary to hold both the artist name and the link on AZlyrics"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c236c99b",
    "metadata": {},
@@ -107,13 +94,13 @@
     "\n",
     "Q: Take a look at the `robots.txt` page on www.azlyrics.com. (You can read more about these pages [here](https://developers.google.com/search/docs/advanced/robots/intro).) Is the scraping we are about to do allowed or disallowed by this page? How do you know? \n",
     "\n",
-    "A: <!-- Delete this comment and put your answer here. --> \n"
+    "A: The scraping of the individual artists pages is allowed based on the robots.txt page as only the following file paths are disallowed: /lyricsdb/ and /song/. The rest are allowed as the page specifies \"Allow: /\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ac9d31ec",
+   "execution_count": 82,
+   "id": "d19a5d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,10 +112,17 @@
     "    r = requests.get(artist_page)\n",
     "    time.sleep(5 + 10*random.random())\n",
     "\n",
-    "    # now extract the links to lyrics pages from this page\n",
-    "    # store the links `lyrics_pages` where the key is the artist and the\n",
-    "    # value is a list of links. \n",
-    "    "
+    "    if r.status_code == 200:\n",
+    "        soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "        for link in soup.find_all(href=re.compile(\"/lyrics/\")): \n",
+    "            # now extract the links to lyrics pages from this page\n",
+    "            lyrics_link = link.get('href')\n",
+    "            # store the links 'lyrics_pages' where the key is the artist and the value is a list of links.\n",
+    "            lyrics_pages[artist].append(lyrics_link)\n",
+    "\n",
+    "# References used in this section:\n",
+    "# https://www.crummy.com/software/BeautifulSoup/bs4/doc/\n",
+    "# https://www.geeksforgeeks.org/beautifulsoup-scraping-link-from-html/ "
    ]
   },
   {
@@ -141,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "ae4cda68",
    "metadata": {},
    "outputs": [],
@@ -152,13 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "edca10d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For CityAlight we have 45.\n",
+      "The full pull will take for this artist will take 0.12 hours.\n",
+      "For Pat Barrett we have 58.\n",
+      "The full pull will take for this artist will take 0.16 hours.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Let's see how long it's going to take to pull these lyrics \n",
-    "# if we're waiting `5 + 10*random.random()` seconds \n",
+    "# Let's see how long it's going to take to pull these lyrics if we're waiting `5 + 10*random.random()` seconds \n",
     "for artist, links in lyrics_pages.items() : \n",
     "    print(f\"For {artist} we have {len(links)}.\")\n",
     "    print(f\"The full pull will take for this artist will take {round(len(links)*10/3600,2)} hours.\")"
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "67693711",
    "metadata": {},
    "outputs": [],
@@ -210,13 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "94a78c78",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make the lyrics folder here. If you'd like to practice your programming, add functionality \n",
-    "# that checks to see if the folder exists. If it does, then use shutil.rmtree to remove it and create a new one.\n",
+    "# Make the lyrics folder here, deleting the old folder if one already exists.\n",
     "\n",
     "if os.path.isdir(\"lyrics\") : \n",
     "    shutil.rmtree(\"lyrics/\")\n",
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "d655b687",
    "metadata": {},
    "outputs": [],
@@ -238,28 +241,53 @@
     "\n",
     "for artist in lyrics_pages :\n",
     "\n",
-    "    # Use this space to carry out the following steps: \n",
-    "    \n",
-    "    # 1. Build a subfolder for the artist\n",
-    "    # 2. Iterate over the lyrics pages\n",
-    "    # 3. Request the lyrics page. \n",
-    "        # Don't forget to add a line like `time.sleep(5 + 10*random.random())`\n",
-    "        # to sleep after making the request\n",
-    "    # 4. Extract the title and lyrics from the page.\n",
-    "    # 5. Write out the title, two returns ('\\n'), and the lyrics. Use `generate_filename_from_url`\n",
-    "    #    to generate the filename. \n",
-    "    \n",
-    "    # Remember to pull at least 20 songs per artist. It may be fun to pull all the songs for the artist\n",
+    "    # Build a subfolder for the artist\n",
+    "    artist_folder = os.path.join(\"lyrics\", artist)\n",
+    "    os.makedirs(artist_folder, exist_ok=True)\n",
+    "\n",
+    "    # Iterate over the lyrics pages\n",
+    "    for link in lyrics_pages[artist]:\n",
+    "        total_pages += 1\n",
+    "        lyrics_url = urljoin(url_stub, link)\n",
+    "        # Request the lyrics page.\n",
+    "        r_lyrics = requests.get(lyrics_url)\n",
+    "        time.sleep(5 + 10 * random.random())\n",
+    "\n",
+    "        # Extract the title and lyrics from the page.\n",
+    "        if r_lyrics.status_code == 200:\n",
+    "            soup_lyrics = BeautifulSoup(r_lyrics.text, 'html.parser')\n",
+    "            title = soup_lyrics.find_all('b')[1].get_text()  # The first <b> tag is artist, 2nd <b> tag is song title, 3rd <b> tag is album\n",
+    "            lyrics = soup_lyrics.find_all('div', class_=None, id=None)[0].get_text(separator='\\n') # The lyrics appear in the 1st <div> tag with no class or id\n",
+    "\n",
+    "            # Write out the title, two returns ('\\n'), and the lyrics. Use `generate_filename_from_url` to generate the filename. \n",
+    "            filename = generate_filename_from_link(link)\n",
+    "            filepath = os.path.join(artist_folder, filename)\n",
+    "\n",
+    "            with open(filepath, 'w', encoding='utf-8') as file:\n",
+    "                file.write(title + '\\n\\n' + lyrics)\n",
+    "\n",
+    "# References used in this section:\n",
+    "# https://www.crummy.com/software/BeautifulSoup/bs4/doc/\n",
+    "# https://stackoverflow.com/questions/10893374/python-confusions-with-urljoin\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "36c394f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total run time was 0.35 hours.\n"
+     ]
+    }
+   ],
    "source": [
+    "# Find the total run time.\n",
     "print(f\"Total run time was {round((time.time() - start)/3600,2)} hours.\")"
    ]
   },
@@ -277,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "217c2b0a",
    "metadata": {},
    "outputs": [],
@@ -300,10 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "bccac29c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Pat Barrett we have 58 files.\n",
+      "For Pat Barrett we have roughly 16442 words, 1255 are unique.\n",
+      "For CityAlight we have 45 files.\n",
+      "For CityAlight we have roughly 11766 words, 923 are unique.\n"
+     ]
+    }
+   ],
    "source": [
     "artist_folders = os.listdir(\"lyrics/\")\n",
     "artist_folders = [f for f in artist_folders if os.path.isdir(\"lyrics/\" + f)]\n",
@@ -327,7 +366,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +380,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
