--- a/Sentiment Assignment.ipynb
+++ b/Sentiment Assignment.ipynb
@@ -13,22 +13,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "aae8e2e1",
-   "metadata": {},
-   "source": [
-    "## General Assignment Instructions\n",
-    "\n",
-    "These instructions are included in every assignment, to remind you of the coding standards for the class. Feel free to delete this cell after reading it. \n",
-    "\n",
-    "One sign of mature code is conforming to a style guide. We recommend the [Google Python Style Guide](https://google.github.io/styleguide/pyguide.html). If you use a different style guide, please include a cell with a link. \n",
-    "\n",
-    "Your code should be relatively easy-to-read, sensibly commented, and clean. Writing code is a messy process, so please be sure to edit your final submission. Remove any cells that are not needed or parts of cells that contain unnecessary code. Remove inessential `import` statements and make sure that all such statements are moved into the designated cell. \n",
-    "\n",
-    "Make use of non-code cells for written commentary. These cells should be grammatical and clearly written. In some of these cells you will have questions to answer. The questions will be marked by a \"Q:\" and will have a corresponding \"A:\" spot for you. *Make sure to answer every question marked with a `Q:` for full credit.* \n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "e2d096b7",
@@ -4118,6 +4102,20 @@
     "Q: Which positive emoji is the most popular for each artist? Which negative emoji? \n",
     "\n",
     "A: Based on the condensed data, the positive emoji that appeared the most in Cher's twitter follower descriptions is the heart ❤, while the most common negative emoji is broken heart 💔. The positive emoji that appeared the most in Robyn's twitter follower descriptions is also the heart ❤, while the most common negative emoji is the weary face 😫."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b42ce3d1",
+   "metadata": {},
+   "source": [
+    "Lexicon reference:\n",
+    "\n",
+    "Bing Liu, Minqing Hu and Junsheng Cheng. \"Opinion Observer: Analyzing \n",
+    "       and Comparing Opinions on the Web.\" Proceedings of the 14th \n",
+    "       International World Wide Web conference (WWW-2005), May 10-14, \n",
+    "       2005, Chiba, Japan."
    ]
   }
  ],
